Add logging feature

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,10 @@ spring.jpa.hibernate.ddl-auto=update
 spring.h2.console.enabled=true
 security.ignored=/**
 spring.jpa.open-in-view=true
+
+logging.file.name=./logs/bankingapi.log
+logging.level.com.blueharvest=INFO
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
+logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
+logging.file.max-size=10MB
+logging.file.max-history=10
